--- a/fixme.dtx
+++ b/fixme.dtx
@@ -780,6 +780,21 @@
 \@fxdefinecmdkey{misc}{author}{}
 %    \end{macrocode}
 % \end{option}
+% \begin{macro}{\@fxpreconfigure}
+%   \marg{author}\\
+%   This macro is used at the beginning of every user-level interface one, to
+%   preconfigure some aspects of the notes, before possibly processing
+%   options.
+%    \begin{macrocode}
+\newcommand*\@fxpreconfigure[1]{%
+  \iffx@lang@langtrack\@fxsetkeys{lang}{\languagename}\fi
+  \ifthenelse{\equal{#1}{fixme}}{%
+    \ifthenelse{\equal{\cmdfx@misc@author}{fixme}}{%
+      \def\cmdfx@misc@author{\fixmelogo}}{}}{%
+    \def\cmdfx@misc@author{#1}}}
+
+%    \end{macrocode}
+% \end{macro}
 %
 % \subsection{List macros}
 % \subsubsection{Contents lines\label{sec:code:contentsline}}
@@ -1590,11 +1605,7 @@
 %    \begin{macrocode}
 \newcommand*\@fxnewnotemacro[3]{%
   \expandafter\DeclareRobustCommand\csname #1#2\endcsname{%
-    \iffx@lang@langtrack\@fxsetkeys{lang}{\languagename}\fi
-    \ifthenelse{\equal{#3}{fixme}}{%
-      \ifthenelse{\equal{\cmdfx@misc@author}{fixme}}{%
-        \def\cmdfx@misc@author{\fixmelogo}}{}}{%
-      \def\cmdfx@misc@author{#3}}%
+    \@fxpreconfigure{#3}%
     \@ifstar{%
       \@ifnextchar[%]
       {\@fxsnote{#2}}{\@@fxsnote{#2}}}{%
@@ -1685,11 +1696,7 @@
 \newcommand*\@fxnewnoteenvs[3]{%
   \expandafter\def\csname #1#2\endcsname{%
     \begingroup%
-      \iffx@lang@langtrack\@fxsetkeys{lang}{\languagename}\fi
-    \ifthenelse{\equal{#3}{fixme}}{%
-      \ifthenelse{\equal{\cmdfx@misc@author}{fixme}}{%
-        \def\cmdfx@misc@author{\fixmelogo}}{}}{%
-      \def\cmdfx@misc@author{#3}}%
+      \@fxpreconfigure{#3}%
       \@ifnextchar[%]
         {\@fxbeginenv{#2}}{\@@fxbeginenv{#2}}}
   \expandafter\def\csname end#1#2\endcsname{%
@@ -1697,11 +1704,7 @@
     \endgroup}%
   \expandafter\long\expandafter\def\csname #1#2*\endcsname{%
     \begingroup%
-      \iffx@lang@langtrack\@fxsetkeys{lang}{\languagename}\fi
-    \ifthenelse{\equal{#3}{fixme}}{%
-      \ifthenelse{\equal{\cmdfx@misc@author}{fixme}}{%
-        \def\cmdfx@misc@author{\fixmelogo}}{}}{%
-      \def\cmdfx@misc@author{#3}}%
+      \@fxpreconfigure{#3}%
       \@ifnextchar[%]
         {\@fxbeginsenv{#2}}{\@@fxbeginsenv{#2}}}
   \expandafter\def\csname end#1#2*\endcsname{%
